# oreo-compiler

./: CMakeLists.txt  README.md  grammar.txt
examples/: functions.oreo  functions2.oreo  test.oreo  test10.oreo  test2.oreo  test3.oreo  test4.oreo  test5.oreo  test6.oreo  test7.oreo  test8.oreo  test9.oreo
examples/parser/: test2.oreo  test3.oreo  test5.oreo  test6.oreo  test8.oreo
examples/semantic_analyser/: semantic.oreo  semantic1.oreo  semantic10.oreo  semantic11.oreo  semantic13.oreo  semantic14.oreo  semantic15.oreo  semantic2.oreo  semantic3.oreo  semantic4.oreo  semantic5.oreo  semantic6.oreo  semantic7.oreo  semantic8.oreo  semantic9.oreo
examples/tac_generation/: tac.oreo  tac1.oreo  tac2.oreo  tac3.oreo  tac4.oreo  tac5.oreo
examples/type_checking/: type.oreo  type10.oreo  type11.oreo  type12.oreo  type2.oreo  type3.oreo  type4.oreo  type6.oreo  type7.oreo  type8.oreo
src/: Makefile  compiler  main.cpp
src/parser/: Lexer.cpp  Lexer.h  ParseException.h  Parser.cpp  Parser.h  Pattern.h  Token.cpp  Token.h  TreeNode.cpp  TreeNode.h
src/semantic/: Scope.cpp  Scope.h  Semantic.cpp  Semantic.h  SemanticException.h
src/tac_generation/: Instruction.cpp  Instruction.h  TAC_Generator.cpp  TAC_Generator.h
src/type_checking/: Operator.cpp  Operator.h  TypeChecker.cpp  TypeChecker.h  TypeException.cpp  TypeException.h
test_output/semantic/: semantic1.out  semantic10.out  semantic11.out  semantic12.out  semantic13.out  semantic14.out  semantic15.out  semantic2.out  semantic3.out  semantic4.out  semantic5.out  semantic6.out  semantic7.out  semantic8.out  (+1 more)
(+17 files in other folders)
